fixed spelling mistake

--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -7,7 +7,7 @@
     <h2><b>Title:</b> {{book.title}}</h2>
     <h2><b>Author:</b> {{book.author}}</h2>
     <h2><b>Genre:</b> {{book.genre}}</h2>
-    <h2><b>Pulisher:</b> {{book.publisher}}</h2>
+    <h2><b>Publisher:</b> {{book.publisher}}</h2>
     <h2><b>Description:</b> {{book.description}}</h2>
 
     {% if book.checked_out %}
