--- a/templates/index.html
+++ b/templates/index.html
@@ -15,14 +15,12 @@
         <label for="publisher">Publisher</label>
         <input type="text" name="publisher" id="publisher">
         <label for="description">Description</label>
-        <textarea name="description" id="description" rows="4" cols="5"></textarea>
+        <textarea name="description" id="description" rows="6" cols="5"></textarea>
         <div class="checked_out">
         <label for="checked_out" align-item="center">Checked out?</label>
         <input type="checkbox" name="checked_out" id="checked_out">
         </div>
         <input type="submit" value="Add book">
-       
-
 
     </form>
     <section class="display_books">
@@ -32,31 +30,34 @@
     <h2><b>Title:</b> {{book.title}}</h2>
     <h2><b>Author:</b> {{book.author}}</h2>
     <h2><b>Genre:</b> {{book.genre}}</h2>
+
+    {% if book.checked_out %}
+    <p><i  style="color:red;">Checked Out</i></p>
+    {% else %}
+    <p><i>On shelf</i></p>
+    {% endif %}
     
-   
-    <a href="/books/{{books.index(book)}}">Show book</a>
+
+    <form action="/books/{{books.index(book)}}" class="form-inline"><input type="submit" value="Show book"></form>
     <form class="form-inline" action="/books/delete/{{ books.index(book) }}" method="post">
         <input type="submit" value="Delete Book">
     </form>
-   
+
         <!-- adding ability to change checked out status -->
         {% if book.checked_out %}
-        <p><i>Checked Out</i></p>
         <form class="checked_out" action="/books/updateco/{{ books.index(book) }}" method="post">
             <label for="checked_out" align-item="center">Checked Out?</label>
         <input type="checkbox" checked="checked" name="checked_out" id="checked_out">
         <input type="submit" value="Update Status">
     </form>
         {% else %}
-        <p><i>On shelf</i></p>
+        
         <form class="checked_out" action="/books/updateco/{{ books.index(book) }}" method="post">
             <label for="checked_out" align-item="center">Checked Out?</label>
         <input type="checkbox" name="checked_out" id="checked_out">
         <input type="submit" value="Update Status">
         </form>
         {% endif %}
-   
-   
     
     {% endfor %}
 </section>
